--- a/ssttek/ssttek.Contact.Redis/ssttek.Contact.Redis.csproj
+++ b/ssttek/ssttek.Contact.Redis/ssttek.Contact.Redis.csproj
@@ -9,4 +9,9 @@
     <PackageReference Include="StackExchange.Redis" Version="2.2.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\ssttek.Shared\ssttek.Shared.csproj" />
+    <ProjectReference Include="..\ssttrek.Entities\ssttrek.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
