adding contact metot , repositories, services

--- a/ssttek/ssttek.Contact.Redis/appsettings.json
+++ b/ssttek/ssttek.Contact.Redis/appsettings.json
@@ -3,6 +3,9 @@
     "Host": "localhost",
     "Port": 6379
   },
+  "ConnectionStrings": {
+    "SsttekContextConnectionString": "Data Source=localhost;Initial Catalog=Ssttek;Persist Security Info=True;User ID=sa;Password=Password12*"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
