--- a/ssttek/ssttek.Infrastructure/ssttek.Infrastructure.csproj
+++ b/ssttek/ssttek.Infrastructure/ssttek.Infrastructure.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ssttek.DataAccess\ssttek.DataAccess.csproj" />
     <ProjectReference Include="..\ssttrek.Entities\ssttrek.Entities.csproj" />
   </ItemGroup>
 </Project>
