--- a/ssttek/ssttek.Contact.Redis/ssttek.Contact.API.csproj
+++ b/ssttek/ssttek.Contact.Redis/ssttek.Contact.API.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="StackExchange.Redis" Version="2.2.4" />
   </ItemGroup>
